--- a/jumeaux.html
+++ b/jumeaux.html
@@ -27,31 +27,30 @@
 
         <p>
             Leur proximité génétique et comportementale a révélé une
-            synchronisation altérique spontanée, dépassant les projections
+            synchronisation altérique spontanée dépassant les projections
             théoriques des unités de recherche.
         </p>
 
         <p>
-            Le projet visait à analyser, isoler et reproduire cette résonance
+            Objectif : comprendre, isoler et reproduire cette résonance
             dans un cadre contrôlé.
         </p>
     </div>
 
     <div class="internal-card">
-        <h2>Évaluation psychologique</h2>
+        <h2>Observations générales</h2>
         <p>
-            Sujet 07-A : profil calme, introverti, haut potentiel
-            d’obéissance conditionnelle.
+            Les sujets présentent une amplification mutuelle lors
+            d’activation simultanée.
         </p>
 
         <p>
-            Sujet 07-B : profil émotionnellement stable en présence
-            du sujet 07-A. Forte dépendance mutuelle observée.
+            Les séparations prolongées provoquent des instabilités
+            énergétiques non mesurables par les standards actuels.
         </p>
 
         <p>
-            Le lien fusionnel représente un facteur d’amplification…
-            mais également une variable incontrôlable.
+            Le lien observé dépasse une simple proximité biologique.
         </p>
     </div>
 
@@ -62,17 +61,13 @@
         face à une situation de stress critique impliquant 07-B.</p>
 
         <p>
-            Résultat : activation incontrôlée.
-            Désintégration partielle de l’infrastructure.
+            Résultat : activation incontrôlée. Désintégration partielle
+            de l’infrastructure interne.
         </p>
 
         <p>
-            Plusieurs membres ont été neutralisés.
-            L’ampleur du phénomène dépasse les simulations.
-        </p>
-
-        <p>
-            Recommandation : isolement strict ou élimination préventive.
+            Plusieurs membres neutralisés. Niveau de destruction
+            supérieur aux simulations.
         </p>
 
         <h3>Enregistrement vidéo :</h3>
@@ -90,14 +85,12 @@
         <p><strong>Date :</strong> 19/03/2120</p>
 
         <p>
-            Suite à l’incident précédent, les sujets 07-A et 07-B
+            Suite à l’incident expérimental, les sujets 07-A et 07-B
             ont pris la fuite durant une panne partielle des systèmes.
         </p>
 
         <p>
-            Plusieurs agents ont été retrouvés neutralisés.
-            Un membre de sécurité a été découvert sans signe vital
-            à proximité de la zone métallique.
+            Plusieurs agents retrouvés neutralisés dans le secteur métallique.
         </p>
 
         <p>
@@ -112,36 +105,29 @@
 
         <div class="incident-block">
 
-    <img src="images/garde_mort.jpg" class="incident-image">
+            <img src="images/garde_mort.jpg" class="incident-image">
 
-    <div class="incident-text">
-        <p>
-            Image d’un agent de sécurité retrouvé sans signe vital
-            suite à l’évasion des sujets 07-A et 07-B.
-        </p>
+            <div class="incident-text">
+                <p>
+                    Impact crânien confirmé. Traces d’altération
+                    moléculaire détectées sur le membre supérieur droit.
+                </p>
 
-        <p>
-            Impact crânien confirmé. Traces d’altération
-            moléculaire détectées sur le membre supérieur droit.
-        </p>
+                <p>
+                    Cause officielle : activation non contrôlée.
+                </p>
+            </div>
 
-        <p>
-            Cause officielle : activation non contrôlée.
-        </p>
-    </div>
+        </div>
 
-</div>
-
-
-
-        <p style="margin-top:20px;">
-            Statut actuel : 
-            <strong>Fuite confirmée.</strong>
+        <p style="margin-top:25px;">
+            <strong>Statut :</strong> Fuite confirmée.
         </p>
 
         <p>
             Priorité absolue : récupération des sujets.
         </p>
+
     </div>
 
 </div>
