--- a/jumeaux.html
+++ b/jumeaux.html
@@ -98,27 +98,31 @@
             la scène depuis le toit de l’établissement.
         </p>
 
+
+       <div class="incident-block">
+
+    <div>
         <p class="incident-caption">
             Image d’un agent de sécurité retrouvé sans signe vital
             suite à l’évasion des sujets 07-A et 07-B.
         </p>
 
-        <div class="incident-block">
+        <img src="images/garde_mort.jpg" class="incident-image">
+    </div>
 
-            <img src="images/garde_mort.jpg" class="incident-image">
+    <div class="incident-text">
+        <p>
+            Impact crânien confirmé. Traces d’altération
+            moléculaire détectées sur le membre supérieur droit.
+        </p>
 
-            <div class="incident-text">
-                <p>
-                    Impact crânien confirmé. Traces d’altération
-                    moléculaire détectées sur le membre supérieur droit.
-                </p>
+        <p>
+            Cause officielle : activation non contrôlée.
+        </p>
+    </div>
 
-                <p>
-                    Cause officielle : activation non contrôlée.
-                </p>
-            </div>
+</div>
 
-        </div>
 
         <p style="margin-top:25px;">
             <strong>Statut :</strong> Fuite confirmée.
