--- a/jumeaux.html
+++ b/jumeaux.html
@@ -101,27 +101,21 @@
 
        <div class="incident-block">
 
-    <div>
+    <div class="incident-left">
         <p class="incident-caption">
-            Image d’un agent de sécurité retrouvé sans signe vital
-            suite à l’évasion des sujets 07-A et 07-B.
+            Image d’un agent de sécurité retrouvé sans signe vital suite à l’évasion des sujets 07-A et 07-B.
         </p>
 
-        <img src="images/garde_mort.jpg" class="incident-image">
+        <img class="incident-image" src="images/garde_mort.jpg">
     </div>
 
     <div class="incident-text">
-        <p>
-            Impact crânien confirmé. Traces d’altération
-            moléculaire détectées sur le membre supérieur droit.
-        </p>
-
-        <p>
-            Cause officielle : activation non contrôlée.
-        </p>
+        <p>Impact crânien confirmé. Traces d’altération moléculaire détectées sur le membre supérieur droit.</p>
+        <p>Cause officielle : activation non contrôlée.</p>
     </div>
 
 </div>
+
 
 
         <p style="margin-top:25px;">
