--- a/orphelinat.html
+++ b/orphelinat.html
@@ -37,6 +37,41 @@
     </ul>
 </section>
 
+<section class="section orphan-direction">
+
+    <h2>Direction de l’établissement</h2>
+
+    <div class="orphan-card">
+
+        <h3>Matriarche Kaede Ishimori</h3>
+
+        <p><strong>O</strong>fficialisée directrice il y a dix-sept ans, Madame Ishimori est reconnue pour sa gestion rigoureuse et son sens aigu de la discipline institutionnelle.</p>
+
+        <p><strong>B</strong>ien qu’issue d’un parcours juridique spécialisé dans les structures privées à régime spécial, elle s’est progressivement orientée vers la supervision éducative.</p>
+
+        <p><strong>S</strong>uite au décès de son époux, ancien médecin militaire, elle a repris la direction complète de l’établissement principal.</p>
+
+        <p><strong>I</strong>ntègre et méthodique, elle veille personnellement aux protocoles de sécurité et à la confidentialité des dossiers internes.</p>
+
+        <p><strong>D</strong>iscrète quant à sa vie privée, elle réside dans une aile réservée du bâtiment administratif.</p>
+
+        <p><strong>I</strong>l est notoire qu’elle effectue elle-même les rondes nocturnes dans les zones sensibles.</p>
+
+        <p><strong>A</strong>ccompagnée parfois de son Shiba Inu nommé Kuro, elle est régulièrement aperçue dans les jardins éducatifs.</p>
+
+        <p><strong>N</strong>ommée par le conseil des institutions privées de la préfecture, elle maintient un réseau discret de partenaires régionaux.</p>
+
+        <div class="orphan-meta">
+            <p><strong>Numéro d’enregistrement institutionnel :</strong> JP-KM-ORPH-2147-88A</p>
+            <p><strong>Identifiant administratif interne :</strong> KM-PRF-07-ALTR-001</p>
+            <p><strong>Localisation GPS :</strong> 32.8031° N, 130.7079° E</p>
+        </div>
+
+    </div>
+
+</section>
+
+    
 <section class="section orphan-pricing">
     <h2>Tarification & Subventions</h2>
     <p>
