--- a/orphelinat.html
+++ b/orphelinat.html
@@ -41,35 +41,30 @@
 
     <h2>Direction de l’établissement</h2>
 
-    <div class="orphan-card">
+    <p class="orphan-paragraph">
+        Officiellement nommée directrice il y a dix-sept ans, Madame Kaede Ishimori est reconnue pour sa gestion rigoureuse et son sens aigu de la discipline institutionnelle. Issue d’un parcours juridique spécialisé dans les structures privées à régime particulier, elle s’est progressivement orientée vers la supervision éducative après le décès de son époux, ancien médecin militaire. Intègre et méthodique, elle veille personnellement aux protocoles de sécurité et à la confidentialité des dossiers internes, maintenant une réputation d’établissement exemplaire au sein de la préfecture.
+    </p>
 
-        <h3>Matriarche Kaede Ishimori</h3>
+    <p class="orphan-paragraph">
+        Résidant dans une aile réservée du bâtiment administratif, la Matriarche est connue pour effectuer elle-même ses rondes nocturnes. Chaque passage suit un ordre précis : 
+        <strong>Portail Nord</strong>, 
+        <strong>Aile Ouest</strong>, 
+        <strong>Salle des Archives</strong>, 
+        <strong>Stockage Interne</strong>, 
+        <strong>Local Technique</strong>, 
+        <strong>Entrepôt</strong>, 
+        <strong>Annexe Médicale</strong>, 
+        <strong>Noyau Central</strong>.
+    </p>
 
-        <p><strong>O</strong>fficialisée directrice il y a dix-sept ans, Madame Ishimori est reconnue pour sa gestion rigoureuse et son sens aigu de la discipline institutionnelle.</p>
-
-        <p><strong>B</strong>ien qu’issue d’un parcours juridique spécialisé dans les structures privées à régime spécial, elle s’est progressivement orientée vers la supervision éducative.</p>
-
-        <p><strong>S</strong>uite au décès de son époux, ancien médecin militaire, elle a repris la direction complète de l’établissement principal.</p>
-
-        <p><strong>I</strong>ntègre et méthodique, elle veille personnellement aux protocoles de sécurité et à la confidentialité des dossiers internes.</p>
-
-        <p><strong>D</strong>iscrète quant à sa vie privée, elle réside dans une aile réservée du bâtiment administratif.</p>
-
-        <p><strong>I</strong>l est notoire qu’elle effectue elle-même les rondes nocturnes dans les zones sensibles.</p>
-
-        <p><strong>A</strong>ccompagnée parfois de son Shiba Inu nommé Kuro, elle est régulièrement aperçue dans les jardins éducatifs.</p>
-
-        <p><strong>N</strong>ommée par le conseil des institutions privées de la préfecture, elle maintient un réseau discret de partenaires régionaux.</p>
-
-        <div class="orphan-meta">
-            <p><strong>Numéro d’enregistrement institutionnel :</strong> JP-KM-ORPH-2147-88A</p>
-            <p><strong>Identifiant administratif interne :</strong> KM-PRF-07-ALTR-001</p>
-            <p><strong>Localisation GPS :</strong> 32.8031° N, 130.7079° E</p>
-        </div>
-
+    <div class="orphan-meta">
+        <p><strong>Numéro d’enregistrement institutionnel :</strong> JP-KM-ORPH-2147-88A</p>
+        <p><strong>Identifiant administratif interne :</strong> KM-PRF-07-ALTR-001</p>
+        <p><strong>Localisation :</strong> Kumamoto, Préfecture de Kumamoto, Japon – 32.8031° N, 130.7079° E</p>
     </div>
 
 </section>
+
 
     
 <section class="section orphan-pricing">
