--- a/orphelinat.html
+++ b/orphelinat.html
@@ -23,12 +23,22 @@
 <section class="section orphan-intro">
     <h2>Présentation</h2>
     <p>
-        Fondé en 1987, l’Orphelinat Hikari no Mori est un établissement
-        spécialisé dans l’accompagnement éducatif et social des mineurs.
-        Situé à Kumamoto, l’établissement offre un environnement sécurisé,
-        structuré et bienveillant.
+        Fondé en 1987, l’Orphelinat Hikari no Mori est un établissement spécialisé dans l’accompagnement éducatif, social et altérique des mineurs en situation de vulnérabilité. Situé au cœur de la ville de Kumamoto, l’établissement bénéficie d’un environnement calme et structuré favorisant le développement personnel et académique des enfants accueillis.
+    </p>
+
+    <p>
+        L’institution s’appuie sur une approche pédagogique moderne, combinant suivi psychologique, encadrement scolaire renforcé et programmes d’évaluation des capacités individuelles. Une attention particulière est portée aux enfants présentant un potentiel altérique singulier, afin d’assurer leur intégration harmonieuse dans la société.
+    </p>
+
+    <p>
+        Les infrastructures comprennent des dortoirs sécurisés, des salles d’étude spécialisées, un espace médical interne, ainsi qu’un jardin éducatif destiné aux activités extérieures. L’établissement fonctionne en partenariat avec plusieurs institutions régionales et organismes privés reconnus.
+    </p>
+
+    <p>
+        Chaque résident fait l’objet d’un suivi personnalisé confidentiel, avec des bilans réguliers visant à évaluer son évolution comportementale, émotionnelle et physiologique.
     </p>
 </section>
+
 
 <!-- Capacité -->
 <section class="section orphan-stats">
