--- a/orphelinat.html
+++ b/orphelinat.html
@@ -19,9 +19,13 @@
     <a href="orphelinat.html" class="active">Orphelinat Hikari no Mori</a>
 </nav>
 
+<!-- ============================= -->
 <!-- Présentation -->
-<section class="section orphan-intro">
+<!-- ============================= -->
+
+<section class="section band-light orphan-intro">
     <h2>Présentation</h2>
+
     <p>
         Fondé en 1987, l’Orphelinat Hikari no Mori est un établissement spécialisé dans l’accompagnement éducatif, social et altérique des mineurs en situation de vulnérabilité. Situé au cœur de la ville de Kumamoto, l’établissement bénéficie d’un environnement calme et structuré favorisant le développement personnel et académique des enfants accueillis.
     </p>
@@ -29,19 +33,38 @@
     <p>
         L’institution s’appuie sur une approche pédagogique moderne, combinant suivi psychologique, encadrement scolaire renforcé et programmes d’évaluation des capacités individuelles. Une attention particulière est portée aux enfants présentant un potentiel altérique singulier, afin d’assurer leur intégration harmonieuse dans la société.
     </p>
-
-    <p>
-        Les infrastructures comprennent des dortoirs sécurisés, des salles d’étude spécialisées, un espace médical interne, ainsi qu’un jardin éducatif destiné aux activités extérieures. L’établissement fonctionne en partenariat avec plusieurs institutions régionales et organismes privés reconnus.
-    </p>
-
-    <p>
-        Chaque résident fait l’objet d’un suivi personnalisé confidentiel, avec des bilans réguliers visant à évaluer son évolution comportementale, émotionnelle et physiologique.
-    </p>
 </section>
 
+<!-- ============================= -->
+<!-- Informations institutionnelles -->
+<!-- ============================= -->
 
-<!-- Capacité -->
-<section class="section orphan-stats">
+<section class="section band-dark orphan-meta-block">
+    <h2>Informations institutionnelles</h2>
+
+    <p><strong>Numéro d’enregistrement :</strong> JP-KM-ORPH-2147-88A</p>
+    <p><strong>Identifiant administratif :</strong> KM-PRF-07-ALTR-001</p>
+    <p>
+        <strong>Localisation :</strong> 
+        Kumamoto, Préfecture de Kumamoto, Japon – 32.8031° N, 130.7079° E
+    </p>
+
+    <div class="orphan-map">
+        <iframe 
+            src="https://maps.google.com/maps?q=32.8031,130.7079&z=15&output=embed"
+            width="100%" 
+            height="300"
+            style="border:0;"
+            loading="lazy">
+        </iframe>
+    </div>
+</section>
+
+<!-- ============================= -->
+<!-- Capacité & Encadrement -->
+<!-- ============================= -->
+
+<section class="section band-light orphan-stats">
     <h2>Capacité & Encadrement</h2>
     <ul>
         <li>Capacité maximale : 42 enfants</li>
@@ -51,62 +74,43 @@
     </ul>
 </section>
 
+<!-- ============================= -->
+<!-- Direction -->
+<!-- ============================= -->
+
+<section class="section band-dark orphan-direction">
+    <h2>Direction de l’établissement</h2>
+
+    <p>
+        Officiellement nommée directrice il y a dix-sept ans, Madame Kaede Ishimori est reconnue pour sa gestion rigoureuse et son sens aigu de la discipline institutionnelle. Issue d’un parcours juridique spécialisé dans les structures privées à régime particulier, elle s’est progressivement orientée vers la supervision éducative après le décès de son époux, ancien médecin militaire.
+    </p>
+
+    <p>
+        Résidant dans une aile réservée du bâtiment administratif, la Matriarche effectue elle-même ses rondes nocturnes. Chaque passage suit un ordre précis :
+        <span class="round-sequence">
+        Portail Nord, Aile Ouest, Salle des Archives, Stockage Interne, Local Technique, Entrepôt, Annexe Médicale, Noyau Central
+        </span>.
+    </p>
+</section>
+
+<!-- ============================= -->
 <!-- Tarification -->
-<section class="section orphan-pricing">
+<!-- ============================= -->
+
+<section class="section band-light orphan-pricing">
     <h2>Tarification & Subventions</h2>
     <p>
-        L’établissement est partiellement subventionné par la municipalité
-        de Kumamoto. Les frais d’accueil sont adaptés selon la situation
-        administrative et sociale des mineurs.
+        L’établissement est partiellement subventionné par la municipalité de Kumamoto. Les frais d’accueil sont adaptés selon la situation administrative et sociale des mineurs.
     </p>
     <p>
         Contribution moyenne : 38 000 ¥ / mois (variable selon dossier).
     </p>
 </section>
 
-<!-- Direction -->
-<section class="section orphan-direction">
+<!-- ============================= -->
+<!-- Vie quotidienne -->
+<!-- ============================= -->
 
-    <h2>Direction de l’établissement</h2>
-
-    <p class="orphan-paragraph">
-        Officiellement nommée directrice il y a dix-sept ans, Madame Kaede Ishimori est reconnue pour sa gestion rigoureuse et son sens aigu de la discipline institutionnelle. Issue d’un parcours juridique spécialisé dans les structures privées à régime particulier, elle s’est progressivement orientée vers la supervision éducative après le décès de son époux, ancien médecin militaire. Intègre et méthodique, elle veille personnellement aux protocoles de sécurité et à la confidentialité des dossiers internes, maintenant une réputation d’établissement exemplaire au sein de la préfecture.
-    </p>
-
-    <p class="orphan-paragraph">
-        Résidant dans une aile réservée du bâtiment administratif, la Matriarche est connue pour effectuer elle-même ses rondes nocturnes. Chaque passage suit un ordre précis : 
-        <span class="round-sequence">
-        Portail Nord, Aile Ouest, Salle des Archives, Stockage Interne, Local Technique, Entrepôt, Annexe Médicale, Noyau Central
-        </span>.
-    </p>
-
-    <div class="orphan-meta">
-        <p><strong>Numéro d’enregistrement institutionnel :</strong> JP-KM-ORPH-2147-88A</p>
-        <p><strong>Identifiant administratif interne :</strong> KM-PRF-07-ALTR-001</p>
-        <p>
-            <strong>Localisation :</strong> 
-            Kumamoto, Préfecture de Kumamoto, Japon – 
-            <a href="https://www.google.com/maps?q=32.8031,130.7079" target="_blank">
-            32.8031° N, 130.7079° E
-            </a>
-        </p>
-    </div>
-
-    <!-- Carte Google -->
-    <div class="orphan-map">
-        <iframe 
-            src="https://maps.google.com/maps?q=32.8031,130.7079&z=15&output=embed"
-            width="100%" 
-            height="300" 
-            style="border:0;"
-            allowfullscreen=""
-            loading="lazy">
-        </iframe>
-    </div>
-
-</section>
-
-<!-- Galerie -->
 <section class="section">
     <h2>Vie quotidienne</h2>
 
@@ -117,7 +121,10 @@
     </div>
 </section>
 
+<!-- ============================= -->
 <!-- Accès Admin -->
+<!-- ============================= -->
+
 <section class="section admin-access">
     <a href="connexion.html" class="admin-button">
         Accès administratif
