--- a/orphelinat.html
+++ b/orphelinat.html
@@ -86,11 +86,12 @@
     </p>
 
     <p>
-        Résidant dans une aile réservée du bâtiment administratif, la Matriarche effectue elle-même ses rondes nocturnes. Chaque passage suit un ordre précis :
-        <span class="round-sequence">
-        Portail Nord, Aile Ouest, Salle des Archives, Stockage Interne, Local Technique, Entrepôt, Annexe Médicale, Noyau Central
-        </span>.
-    </p>
+    Résidant dans une aile réservée du bâtiment administratif, la Matriarche effectue elle-même ses rondes nocturnes. Chaque passage suit un ordre précis :
+    <span class="round-sequence">
+    Portail Nord, Aile Ouest, Salle des Archives, Stockage Interne, Local Technique, Entrepôt, Annexe Médicale, Noyau Central
+    </span>. 
+    Une fois sa vérification terminée, elle se rend systématiquement à son bureau afin de <strong>connecté</strong> son poste sécurisé et de travailler sur les dossiers internes en cours.
+</p>
 </section>
 
 <!-- ============================= -->
