--- a/orphelinat.html
+++ b/orphelinat.html
@@ -88,7 +88,7 @@
     <p>
     Résidant dans une aile réservée du bâtiment administratif, la Matriarche effectue elle-même ses rondes nocturnes. Chaque passage suit un ordre précis :
     <span class="round-sequence">
-    Portail Nord, Aile Ouest, Salle des Archives, Stockage Interne, Local Technique, Entrepôt, Annexe Médicale, Noyau Central
+    Portail nord, Aile ouest, Salle des archives, Stockage interne, Local technique, Entrepôt, Annexe médicale, Noyau central
     </span>. 
     Une fois sa vérification terminée, elle se rend systématiquement à son bureau afin de <strong>connecté</strong> son poste sécurisé et de travailler sur les dossiers internes en cours.
 </p>
