--- a/connexion.html
+++ b/connexion.html
@@ -6,7 +6,7 @@
         function checkPassword() {
             var password = document.getElementById("password").value;
 
-            if(password === "jumeaux2006") {
+            if(password === "PASSLEAN") {
                 window.location.href = "verification.html";
             } else {
                 alert("Mot de passe incorrect.");
