--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Ville de Kumamoto</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header>
+<header class="hero">
     <h1>Ville de Kumamoto</h1>
 </header>
 
@@ -14,50 +16,132 @@
     <a href="index.html" class="active">Accueil</a>
     <a href="#">Culture</a>
     <a href="#">Éducation</a>
-    <a href="orphelinat.html">Orphelinat Hikari no Mori</a>
+    <a href="institutions.html">Institutions</a>
 </nav>
 
-<section class="section">
+<!-- ============================= -->
+<!-- Bienvenue -->
+<!-- ============================= -->
+
+<section class="section band-light">
     <h2>Bienvenue à Kumamoto</h2>
+
     <p>
-        Située sur l’île de Kyushu, Kumamoto est reconnue pour son patrimoine historique,
-        son château emblématique et ses festivals saisonniers.
+        Située sur l’île de Kyushu, Kumamoto est reconnue pour son patrimoine
+        historique, son château emblématique et ses festivals saisonniers.
+        La ville combine harmonieusement modernité urbaine et respect des traditions.
+    </p>
+
+    <p>
+        Son développement récent dans les domaines technologiques et éducatifs
+        en fait aujourd’hui un centre régional majeur, attirant étudiants,
+        chercheurs et familles souhaitant bénéficier d’un environnement sûr
+        et structuré.
     </p>
 </section>
 
-<section class="section">
-    <h2>Découvrir la ville</h2>
+<!-- ============================= -->
+<!-- Histoire & Identité -->
+<!-- ============================= -->
 
-    <div class="cards">
-        <div class="card">
-            <img src="images/parc.jpg">
-            <div class="card-content">
-                <h3>Parc Suizenji</h3>
-                <p>Un jardin traditionnel offrant une vue paisible.</p>
-            </div>
+<section class="section band-dark">
+    <h2>Histoire & Identité</h2>
+
+    <p>
+        Kumamoto occupe une place centrale dans l’histoire féodale du Japon.
+        Son château, reconstruit après les séismes majeurs, reste un symbole
+        de résilience et de stabilité.
+    </p>
+
+    <p>
+        Aujourd’hui, la municipalité met l’accent sur l’encadrement éducatif,
+        la sécurité urbaine et le développement de structures adaptées aux
+        mineurs et aux populations sensibles.
+    </p>
+
+    <p>
+        L’administration locale travaille en étroite collaboration avec
+        diverses institutions privées et publiques afin d’assurer une
+        supervision optimale des établissements spécialisés.
+    </p>
+</section>
+
+<!-- ============================= -->
+<!-- Actualités -->
+<!-- ============================= -->
+
+<section class="section band-light">
+    <h2>Actualités récentes</h2>
+
+    <div class="news-grid">
+
+        <div class="news-card">
+            <h3>Modernisation des structures éducatives</h3>
+            <p>
+                Un plan municipal prévoit la mise à jour des protocoles
+                d’encadrement et de sécurité dans les établissements
+                accueillant des mineurs.
+            </p>
         </div>
 
-        <div class="card">
-            <img src="images/streetfood.jpg">
-            <div class="card-content">
-                <h3>Marché de Street Food</h3>
-                <p>Découvrez les spécialités locales.</p>
-            </div>
+        <div class="news-card">
+            <h3>Extension du réseau de surveillance</h3>
+            <p>
+                Installation de nouveaux dispositifs de sécurité
+                dans les zones périphériques afin de renforcer
+                la protection des infrastructures sensibles.
+            </p>
         </div>
 
-        <div class="card">
-            <img src="images/orphanage.jpg">
-            <div class="card-content">
-                <h3>Orphelinat Hikari no Mori</h3>
-                <p>Institution éducative reconnue.</p>
-                <a href="orphelinat.html" class="button">En savoir plus</a>
-            </div>
+        <div class="news-card">
+            <h3>Forum sur l’encadrement institutionnel</h3>
+            <p>
+                Conférence dédiée aux structures spécialisées
+                et à la gestion administrative des établissements
+                à régime particulier.
+            </p>
         </div>
+
     </div>
 </section>
 
+<!-- ============================= -->
+<!-- Découvrir la ville -->
+<!-- ============================= -->
+
+<section class="section band-dark">
+    <h2>Découvrir la ville</h2>
+
+    <div class="gallery">
+        <img src="images/kumamoto1.jpg" alt="Vue de Kumamoto">
+        <img src="images/kumamoto2.jpg" alt="Festival local">
+        <img src="images/kumamoto3.jpg" alt="Château de Kumamoto">
+    </div>
+</section>
+
+<!-- ============================= -->
+<!-- Vie locale -->
+<!-- ============================= -->
+
+<section class="section band-light">
+    <h2>Vie locale</h2>
+
+    <p>
+        Festivals saisonniers, marchés nocturnes et événements culturels
+        rythment la vie des habitants. Kumamoto se distingue également par
+        la qualité de ses infrastructures éducatives et de ses structures
+        d’accueil spécialisées.
+    </p>
+
+    <p>
+        La municipalité maintient un contrôle strict des établissements
+        privés opérant sur son territoire, garantissant conformité,
+        sécurité et confidentialité administrative.
+    </p>
+</section>
+
 <footer>
-    © Ville de Kumamoto – Portail officiel
+    © Ville de Kumamoto – Portail municipal officiel
 </footer>
 
 </body>
