--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
     <h2>Découvrir la ville</h2>
 
     <div class="gallery">
-        <img src="images/kumamoto1.jpg" alt="Vue de Kumamoto">
-        <img src="images/kumamoto2.jpg" alt="Festival local">
-        <img src="images/kumamoto3.jpg" alt="Château de Kumamoto">
+        <img src="images/parc.jpg" alt="Parc municipal">
+        <img src="images/streetfood.jpg" alt="Festival local">
+        <img src="images/orphanage.jpg" alt="Orphelinat Hikari no Mori">
     </div>
 </section>
 
