--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="gallery">
         <img src="images/parc.jpg" alt="Parc municipal">
         <img src="images/streetfood.jpg" alt="Festival local">
-        <img src="images/orphanage.jpg" alt="Orphelinat Hikari no Mori">
+        <img src="images/chateau.jpg" alt="Château de Kumamoto">
     </div>
 </section>
 
