--- a/institutions.html
+++ b/institutions.html
@@ -22,22 +22,28 @@
 <section class="section band-light">
     <h2>Établissements reconnus</h2>
 
-    <div class="news-grid">
+    <div class="institution-grid">
 
-        <div class="news-card">
+        <!-- Lycée -->
+        <div class="institution-card">
+            <img src="images/lycee.jpg" alt="Lycée Municipal Central">
             <h3>Lycée Municipal Central</h3>
-            <p>Établissement public d’enseignement secondaire.</p>
+            <p>Établissement public d’enseignement secondaire reconnu pour son excellence académique.</p>
         </div>
 
-        <div class="news-card">
+        <!-- Centre culturel -->
+        <div class="institution-card">
+            <img src="images/centre.jpg" alt="Centre Culturel Shinrin">
             <h3>Centre Culturel Shinrin</h3>
-            <p>Structure municipale dédiée aux arts traditionnels.</p>
+            <p>Structure municipale dédiée aux arts traditionnels et à la transmission culturelle.</p>
         </div>
 
-        <div class="news-card">
+        <!-- Orphelinat -->
+        <div class="institution-card highlight">
+            <img src="images/orphanage.jpg" alt="Orphelinat Hikari no Mori">
             <h3>Orphelinat Hikari no Mori</h3>
-            <p>Structure d’accueil spécialisée pour mineurs.</p>
-            <a href="orphelinat.html">En savoir plus</a>
+            <p>Structure spécialisée dans l’accueil et l’encadrement de mineurs.</p>
+            <a href="orphelinat.html" class="btn-primary">En savoir plus</a>
         </div>
 
     </div>
