--- a/orphelinat.html
+++ b/orphelinat.html
@@ -86,9 +86,9 @@
     </p>
 
     <p>
-    Résidant dans une aile réservée du bâtiment administratif, la Matriarche effectue elle-même ses rondes nocturnes. Chaque passage suit un ordre précis :
+    Résidant dans une aile réservée du bâtiment administratif, la Matriarche effectue elle-même ses rondes nocturnes. Chaque passage suit un <strong>ordre précis</strong> :
     <span class="round-sequence">
-    Portail nord, Aile ouest, Salle des archives, Stockage interne, Local technique, Entrepôt, Annexe médicale, Noyau central
+    Façade principale, Observatoire, Salle des archives, Stockage interne, Office administratif, Yard technique, Entrée secondaire, Unité médicale, Réserve centrale
     </span>. 
     Une fois sa vérification terminée, elle se rend systématiquement à son bureau afin de <strong>connecté</strong> son poste sécurisé et de travailler sur les dossiers internes en cours.
 </p>
